--- a/templates/index.html
+++ b/templates/index.html
@@ -1,20 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trucks - Main page</title>
-</head>
-
-<body>
-
-    <header>
-        <h1>Main Page</h1>
-        <nav>
-            <a href="/login">Login</a>
-        </nav>
-    </header>
-</body>
-
-</html>
+{{template "header.tmpl"}}
+<header>
+    <h1>Main Page</h1>
+    <nav>
+        <a href="/login">Login</a>
+    </nav>
+</header>
+{{template "footer.tmpl"}}
