--- a/templates/trucks.html
+++ b/templates/trucks.html
@@ -11,6 +11,7 @@
             <h2>Truck no. {{$index}}</h2>
             <p>Informations</p>
             <ul>
+                <li>{{$truck.Id}}</li>
                 <li>{{$truck.FuelType}}</li>
                 <li>{{$truck.Payload}} T</li>
                 <li>{{$truck.Distance}}Km</li>
