Force user_admin to fill all inputs before submit

--- a/templates/trucks.html
+++ b/templates/trucks.html
@@ -8,11 +8,11 @@
 <form action="/admin/trucks/add" method="POST">
     <h2>Add new trucks here</h2>
     <label for="fuelType">Fuel Type</label>
-    <input type="text" id="fuelType" name="fuel_type"/>
+    <input type="text" id="fuelType" name="fuel_type" required/>
     <label for="payload">Payload</label>
-    <input type="text" id="payload" name="payload"/>
+    <input type="text" id="payload" name="payload" required/>
     <label for="distance">Distance</label>
-    <input type="text" id="distance" name="distance"/>
+    <input type="text" id="distance" name="distance" required/>
     <button>Add</button>
 </form>
 
